--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "6.15.1",
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "twilio": "^3.60.0"
   },
   "scripts": {
     "start": "react-scripts start",
