--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "analytics": "0.3.1",
     "bootstrap": "4.4.1",
     "firebase": "8.2.5",
+    "firebase-admin": "^9.6.0",
     "history": "4.10.1",
     "node-sass": "4.14.1",
     "query-string": "6.13.8",
