--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "8.2.5",
     "firebase-admin": "^9.6.0",
     "history": "4.10.1",
+    "lodash": "^4.17.21",
     "node-sass": "4.14.1",
     "query-string": "6.13.8",
     "react": "17.0.1",
