--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "my-divjoy-project",
+  "name": "vaccine-notifications",
   "version": "0.1.0",
   "private": true,
   "keywords": [
-    "divjoy"
+    "covid",
+    "covid19",
+    "vaccine",
+    "vaccinenotifications",
+    "vaccine notifications"
   ],
   "dependencies": {
     "@analytics/google-analytics": "0.2.2",
