--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.3",
     "twilio": "^3.60.0"
   },
   "scripts": {
