--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@analytics/google-analytics": "0.2.2",
     "analytics": "0.3.1",
     "bootstrap": "4.4.1",
+    "expo-server-sdk": "^3.6.0",
     "firebase": "8.2.5",
     "firebase-admin": "^9.6.0",
     "history": "4.10.1",
