--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@analytics/google-analytics": "0.2.2",
     "analytics": "0.3.1",
+    "axios": "^0.21.1",
     "bootstrap": "4.4.1",
     "expo-server-sdk": "^3.6.0",
     "firebase": "8.2.5",
