--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
+    "slack": "^11.0.2",
     "styled-components": "^5.2.3",
     "twilio": "^3.60.0",
     "web-push": "^3.4.4"
